--- a/CO653-TEAM-EM.ipynb
+++ b/CO653-TEAM-EM.ipynb
@@ -559,7 +559,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def handle_missing_values(data, threshold=0.5):\n",
+    "    \"\"\"\n",
+    "    Handles missing values in a dataset:\n",
+    "    - Drops columns with more than a specified threshold of missing values.\n",
+    "    - Fills remaining missing values with median for numeric columns and mode for categorical columns.\n",
+    "\n",
+    "    Parameters:\n",
+    "        data (pd.DataFrame): The input dataset.\n",
+    "        threshold (float): The proportion of missing values above which columns are dropped (default 0.5).\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: The cleaned dataset.\n",
+    "    \"\"\"\n",
+    "    # Step 1: Drop columns with high missing values\n",
+    "    missing_percentage = data.isnull().mean()  # Calculate percentage of missing values\n",
+    "    columns_to_drop = missing_percentage[missing_percentage > threshold].index\n",
+    "    print(f\"Dropping columns with more than {threshold*100}% missing values: {list(columns_to_drop)}\")\n",
+    "    data = data.drop(columns=columns_to_drop)\n",
+    "\n",
+    "    # Step 2: Fill numeric columns with median\n",
+    "    numeric_columns = data.select_dtypes(include=['float64', 'int64']).columns\n",
+    "    for col in numeric_columns:\n",
+    "        if data[col].isnull().sum() > 0:  # Only fill if there are missing values\n",
+    "            data[col] = data[col].fillna(data[col].median())\n",
+    "\n",
+    "    # Step 3: Fill categorical columns with mode\n",
+    "    categorical_columns = data.select_dtypes(include=['object', 'category']).columns\n",
+    "    for col in categorical_columns:\n",
+    "        if data[col].isnull().sum() > 0:  # Only fill if there are missing values\n",
+    "            data[col] = data[col].fillna(data[col].mode()[0])  # Use the most frequent value\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "# Example usage\n",
+    "data = handle_missing_values(data, threshold=0.5)\n",
+    "\n",
+    "# Check the result\n",
+    "print(data.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
