--- a/test.ipynb
+++ b/test.ipynb
@@ -25,11 +25,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3a2a96a8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = pd.DataFrame([{\n",
+    "        \"Gender\": \"Male\",\n",
+    "        \"Married\": \"Single\",\n",
+    "        \"Dependents\": \"1\",\n",
+    "        \"Education\": \"Graduate\",\n",
+    "        \"Self_Employed\": \"Yes\",\n",
+    "        \"ApplicantIncome\": 100,\n",
+    "        \"CoapplicantIncome\": 100,\n",
+    "        \"LoanAmount\": 100,\n",
+    "        \"Loan_Amount_Term\": 360,\n",
+    "        \"Credit_History\": 1.0,\n",
+    "        \"Property_Area\": \"Urban\",\n",
+    "        \"TotalIncome\": 200,\n",
+    "        \"Loan_Income_Ratio\": 0.5\n",
+    "    }])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "708e2d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "      <th>Property_Area</th>\n",
+       "      <th>TotalIncome</th>\n",
+       "      <th>Loan_Income_Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>200</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Gender Married Dependents Education Self_Employed  ApplicantIncome  \\\n",
+       "0   Male  Single          1  Graduate           Yes              100   \n",
+       "\n",
+       "   CoapplicantIncome  LoanAmount  Loan_Amount_Term  Credit_History  \\\n",
+       "0                100         100               360             1.0   \n",
+       "\n",
+       "  Property_Area  TotalIncome  Loan_Income_Ratio  \n",
+       "0         Urban          200                0.5  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1b656196",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender                object\n",
+       "Married               object\n",
+       "Dependents            object\n",
+       "Education             object\n",
+       "Self_Employed         object\n",
+       "ApplicantIncome        int64\n",
+       "CoapplicantIncome      int64\n",
+       "LoanAmount             int64\n",
+       "Loan_Amount_Term       int64\n",
+       "Credit_History       float64\n",
+       "Property_Area         object\n",
+       "TotalIncome            int64\n",
+       "Loan_Income_Ratio    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ede866a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_df = mestimate_encoder.transform(test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "73577ffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "      <th>Property_Area</th>\n",
+       "      <th>TotalIncome</th>\n",
+       "      <th>Loan_Income_Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.691196</td>\n",
+       "      <td>0.687296</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.708116</td>\n",
+       "      <td>0.683178</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.659113</td>\n",
+       "      <td>200</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender   Married Dependents  Education  Self_Employed  ApplicantIncome  \\\n",
+       "0  0.691196  0.687296          1   0.708116       0.683178              100   \n",
+       "\n",
+       "   CoapplicantIncome  LoanAmount  Loan_Amount_Term  Credit_History  \\\n",
+       "0                100         100               360             1.0   \n",
+       "\n",
+       "   Property_Area  TotalIncome  Loan_Income_Ratio  \n",
+       "0       0.659113          200                0.5  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_df.head()"
+   ]
   }
  ],
  "metadata": {
